<?xml version="1.0" encoding="utf-8"?>
<!-- The single unified header, forced onto every screen: Search + View filter + Sort + Settings.
     The screen title is the toolbar's own title (set by setupUniversalHeader), not a menu item.
     Wired centrally by UniversalHeader.kt; individual screens only supply the callbacks. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_view_mode"
        android:icon="@drawable/ic_view_mode"
        android:title="@string/view_mode"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>
